# GTestCoverage

./: CMakeLists.txt
tests/: CMakeLists.txt  External_GTest.cmake
